--- a/css/colors/purple.css
+++ b/css/colors/purple.css
@@ -39,7 +39,7 @@
 .tns-controls button[data-controls="prev"]:hover, 
 .tns-controls button[data-controls="next"]:hover,
 .back-to-top {
-    background-color: #2f55d4 !important;
+    background-color: #7952B3 !important;
 }
 
 .text-primary,
@@ -101,7 +101,7 @@
 .accordion .accordion-button:not(.collapsed),
 .accordion .accordion-item .accordion-button:before,
 #navmenu-nav li.active a {
-    color: #2f55d4 !important;
+    color: #7952B3 !important;
 }
 
 .btn-primary,
@@ -139,7 +139,7 @@
 .container-filter li.active, .container-filter li:hover,
 .blockquote-wrapper .blockquote,
 .blockquote-wrapper .blockquote:after {
-    border-color: #2f55d4 !important;
+    border-color: #7952B3 !important;
 }
 
 .bg-soft-primary,
@@ -151,12 +151,12 @@
 .social-feature-left:after,
 .social-feature-right:after,
 .event-schedule .date .day {
-    background-color: rgba(47, 85, 212, 0.05) !important;
+    background-color: rgba(121, 82, 179, 0.05) !important;
 }
 
 .bg-soft-primary,
 .btn-soft-primary {
-    border: 1px solid rgba(47, 85, 212, 0.05) !important;
+    border: 1px solid rgba(121, 82, 179, 0.05) !important;
 }
 
 .app-feature-shape-right:after,
@@ -165,17 +165,17 @@
 .saas-feature-shape-right:after,
 .social-feature-left:after,
 .social-feature-right:after {
-    box-shadow: 0 0 40px rgba(47, 85, 212, 0.05);
+    box-shadow: 0 0 40px rgba(121, 82, 179, 0.05);
 }
 
 .event-schedule .date .day {
-    box-shadow: 0px 0px 2px 0.25px rgba(47, 85, 212, 0.5);
+    box-shadow: 0px 0px 2px 0.25px rgba(121, 82, 179, 0.5);
 }
 
 .features .icon,
 .features.feature-clean .icons i,
 .features:hover .image:before {
-    background-color: rgba(47, 85, 212, 0.1) !important;
+    background-color: rgba(121, 82, 179, 0.1) !important;
 }
 
 .btn-primary,
@@ -186,67 +186,68 @@
 .btn-outline-primary.active, 
 .btn-outline-primary.focus, 
 .btn-outline-primary:not(:disabled):not(.disabled):active {
-    box-shadow: 0 3px 5px 0 rgba(47, 85, 212, 0.1);
+    box-shadow: 0 3px 5px 0 rgba(121, 82, 179, 0.1);
 }
 
 .alert-primary,
 .pagination .page-item .page-link:hover,
 ::selection {
-    background: rgba(47, 85, 212, 0.9);
-    border-color: rgba(47, 85, 212, 0.9);
+    background: rgba(121, 82, 179, 0.9);
+    border-color: rgba(121, 82, 179, 0.9);
 }
 
 .social-icon li a:hover .fea-social {
-    fill: #2f55d4;
+    fill: #7952B3;
 }
 
 .bg-circle-gradiant {
-    background: radial-gradient(circle at 50% 50%, rgba(47, 85, 212, 0.1) 0%, rgba(47, 85, 212, 0.1) 33.333%, rgba(47, 85, 212, 0.2) 33.333%, rgba(47, 85, 212, 0.2) 66.666%, rgba(47, 85, 212, 0.3) 66.666%, rgba(47, 85, 212, 0.3) 99.999%);
+    background: radial-gradient(circle at 50% 50%, rgba(121, 82, 179, 0.1) 0%, rgba(121, 82, 179, 0.1) 33.333%, rgba(121, 82, 179, 0.2) 33.333%, rgba(121, 82, 179, 0.2) 66.666%, rgba(121, 82, 179, 0.3) 66.666%, rgba(121, 82, 179, 0.3) 99.999%);
 }
 
 .bg-gradient-primary {
-  background: linear-gradient(to left, #614092 0%, #2443ac 100%);
+  background: linear-gradient(to left, #2443ac 0%, #614092 100%);
 }
 
 .tns-nav button {
-    background: rgba(47, 85, 212, 0.5) !important;
+    background: rgba(121, 82, 179, 0.5) !important;
 }
 
 .classic-app-image .bg-app-shape:after,
 .classic-saas-image .bg-saas-shape:after,
 .freelance-hero .bg-shape:after {
-    box-shadow: 0 0 40px rgba(47, 85, 212, 0.5);
+    box-shadow: 0 0 40px rgba(121, 82, 179, 0.5);
 }
 
 .freelance-hero .bg-shape:after {
-    background-color: #99abea;
+    background-color: #beabda;
 }
 
 .key-feature .icon {
-    background: linear-gradient(45deg, transparent, rgba(47, 85, 212, 0.15));
+    background: linear-gradient(45deg, transparent, rgba(121, 82, 179, 0.15));
 }
 
 .features .image:before {
-    background: linear-gradient(45deg, transparent, rgba(47, 85, 212, 0.1));
+    background: linear-gradient(45deg, transparent, rgba(121, 82, 179, 0.1));
 }
 
 .home-wrapper:before {
-    background: -webkit-gradient(linear, left top, right top, from(rgba(47, 85, 212, 0.3)), to(transparent));
-    background: linear-gradient(90deg, rgba(47, 85, 212, 0.3), transparent);
+    background: -webkit-gradient(linear, left top, right top, from(rgba(121, 82, 179, 0.3)), to(transparent));
+    background: linear-gradient(90deg, rgba(121, 82, 179, 0.3), transparent);
 }
 
 .play-icon i {
-    -webkit-text-stroke: 2px #2f55d4;
+    -webkit-text-stroke: 2px #7952B3;
     -webkit-text-fill-color: transparent;
 }
 
 .play-icon i:hover {
-    -webkit-text-stroke: 2px #2f55d4;
-    -webkit-text-fill-color: #2f55d4;
+    -webkit-text-stroke: 2px #7952B3;
+    -webkit-text-fill-color: #7952B3;
 }
+
 a.text-primary:hover, 
 a.text-primary:focus {
-    color: #284bc1 !important;
+    color: #6d48a4 !important;
 }
 
 .btn-primary:hover, 
@@ -254,16 +255,16 @@ a.text-primary:focus {
 .btn-primary:active, 
 .btn-primary.active, 
 .btn-primary.focus {
-    background-color: #2443ac !important;
-    border-color: #2443ac !important;
+    background-color: #614092 !important;
+    border-color: #614092 !important;
 }
 
 .ribbon.ribbon-primary span:before {
-    border-left-color: #2443ac;
-    border-top-color: #2443ac;
+    border-left-color: #614092;
+    border-top-color: #614092;
 }
 
 .ribbon.ribbon-primary span:after {
-    border-right-color: #2443ac;
-    border-top-color: #2443ac;
+    border-right-color: #614092;
+    border-top-color: #614092;
 }
