--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,6 +1,11 @@
 //
 // contact.scss
 //
+
+/*********************************/
+/*         Contact us            */
+/*===============================*/
+
 .form-icon {
     .icons {
         position: absolute;
