--- a/scss/dark/_general.scss
+++ b/scss/dark/_general.scss
@@ -2,6 +2,10 @@
 // general.scss
 //
 
+/*********************************/
+/*     General-DARK              */
+/*===============================*/
+
 body {
     color: $dark;
     background: $bg-body;
