--- a/scss/dark/_helper.scss
+++ b/scss/dark/_helper.scss
@@ -1,6 +1,11 @@
 //
 // helper.scss
 //
+
+/*********************************/
+/*     Helper-DARK               */
+/*===============================*/
+
 .bg-overlay {
     background-color: $overlay;
 }
