--- a/scss/dark/rtl/_general-rtl.scss
+++ b/scss/dark/rtl/_general-rtl.scss
@@ -2,6 +2,10 @@
 // general.scss
 //
 
+/*********************************/
+/*     General-DARK-RTL     */
+/*===============================*/
+
 html {
     direction: rtl;
 }
