--- a/scss/rtl/_general-rtl.scss
+++ b/scss/rtl/_general-rtl.scss
@@ -2,6 +2,10 @@
 // general.scss
 //
 
+/*********************************/
+/*     General-RTL               */
+/*===============================*/
+
 html {
     direction: rtl;
 }
