--- a/scss/_bootstrap-custom.scss
+++ b/scss/_bootstrap-custom.scss
@@ -1,6 +1,11 @@
 //
 // Bootstrap-custom.scss
 //
+
+/*********************************/
+/*         Bootstrap-custom      */
+/*===============================*/
+
 .container {
     @media (min-width: 1400px) {
         max-width: 1140px !important;
@@ -39,7 +44,6 @@ $value in $colors {
         color: #{$value} !important;
     }
     a {
-        transition: all 0.5s ease;
         &.text-#{$name} {
             &:hover,
             &:focus {
@@ -57,6 +61,10 @@ $value in $colors {
 
 .bg-black {
     background: $black !important;
+}
+
+.text-white-50 {
+    color: rgba($white, 0.5);
 }
 
 //Video tag
@@ -101,11 +109,18 @@ video {
 }
 
 //Border
+@each $name,
+$value in $colors {
+    .border-#{$name} {
+        border-color: #{$value} !important;
+    }
+}
+
 .border {
     border: 1px solid $gray-200 !important;
 }
 .border-top {
-    border-top: 1px solid $gray-200 !important;    
+    border-top: 1px solid $gray-200!important;
 }
 .border-bottom {
     border-bottom: 1px solid $gray-200 !important;    
@@ -117,6 +132,51 @@ video {
     border-right: 1px solid $gray-200 !important;    
 }
 
+// Opacity
+.opacity-05 {
+    opacity: 0.05;
+}
+
+.opacity-075 {
+    opacity: 0.075;
+}
+
+.opacity-1 {
+    opacity: 0.1;
+}
+
+.opacity-2 {
+    opacity: 0.2;
+}
+
+.opacity-3 {
+    opacity: 0.3;
+}
+
+.opacity-4 {
+    opacity: 0.4;
+}
+
+.opacity-5 {
+    opacity: 0.5;
+}
+
+.opacity-6 {
+    opacity: 0.6;
+}
+
+.opacity-7 {
+    opacity: 0.7;
+}
+
+.opacity-8 {
+    opacity: 0.8;
+}
+
+.opacity-9 {
+    opacity: 0.9;
+}
+
 //Small
 .small, small {
     font-size: 90%;
@@ -126,5 +186,48 @@ video {
 .card {
     .card-body {
         padding: 1.5rem;
+    }
+}
+
+//Offcanvas
+.offcanvas {
+    .offcanvas-header {
+        .dark-version {
+            display: none;
+        }
+        .light-version {
+            display: inline-block;
+        }
+        .btn-close {
+            color: $dark;
+            background: none;
+            &:focus {
+                box-shadow: none;
+            }
+        }
+    }
+    &.offcanvas-end {
+        width: 350px;
+    }
+}
+
+@media (max-width: 768px) {
+    .display-1 {
+        font-size: 56px !important;
+    }
+    .display-2 {
+        font-size: 50px !important;
+    }
+    .display-3 {
+        font-size: 42px !important;
+    }
+    .display-4 {
+        font-size: 36px !important;
+    }
+    .display-5 {
+        font-size: 30px !important;
+    }
+    .display-6 {
+        font-size: 24px !important;
     }
 }
