--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -2,6 +2,10 @@
 // components.scss
 //
 
+/*********************************/
+/*         Components            */
+/*===============================*/
+
 //component-wrapper
 .component-wrapper {
     .title {
@@ -31,7 +35,7 @@ $value in $colors {
         background-color: #{$value} !important;
         border: 1px solid #{$value} !important;
         color: $white !important;
-        box-shadow: 0 3px 5px 0 rgba($value, 0.3);
+        box-shadow: 0 3px 5px 0 rgba($value, 0.1);
         &:hover, &:focus, &:active, &.active, &.focus{
             background-color: darken($value, 10%) !important;
             border-color: darken($value, 10%) !important;
@@ -40,10 +44,10 @@ $value in $colors {
     }
 
     .btn-soft-#{$name} {
-        background-color: rgba($value, 0.1) !important;
-        border: 1px solid rgba($value, 0.1) !important;
+        background-color: rgba($value, 0.05) !important;
+        border: 1px solid rgba($value, 0.05) !important;
         color: #{$value} !important;
-        box-shadow: 0 3px 5px 0 rgba($value, 0.3);
+        box-shadow: 0 3px 5px 0 rgba($value, 0.1);
         &:hover, &:focus, &:active, &.active, &.focus{
             background-color: #{$value} !important;
             border-color: #{$value} !important;
@@ -59,7 +63,7 @@ $value in $colors {
             background-color: #{$value};
             border-color: #{$value};
             color: $white !important;
-            box-shadow: 0 3px 5px 0 rgba($value, 0.3);
+            box-shadow: 0 3px 5px 0 rgba($value, 0.1);
         }
     }
 }
@@ -115,7 +119,9 @@ $value in $colors {
     &.btn-icon {
         height: 36px;
         width: 36px;
-        line-height: 34px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
         padding: 0;
         .icons {
             height: 16px;
@@ -143,6 +149,7 @@ $value in $colors {
 button:not(:disabled) {
     outline: none;
 }
+
 
 //Shadow 
 .shadow {
@@ -224,6 +231,14 @@ $value in $colors {
     }
 }
 
+.dropdown {
+    .dropdown-toggle {
+        &:after {
+            display: none;
+        }
+    }
+}
+
 //Alert
 @each $name,
 $value in $colors {
@@ -268,20 +283,21 @@ $value in $colors {
 }
 
 //Breadcrumb
-.page-next-level{
+.pages-heading{
     .title {
-        font-size: 28px;
+        font-size: 32px !important;
         letter-spacing: 1px;
     }
-    .page-next {
-        position: relative;
-        top: 110px;
-        z-index: 99;
+}
 
-        @media (max-width: 768px) {
-            top: 70px;
-        }
-    }
+.position-breadcrumb {
+    position: absolute;
+    top: 100%;
+    right: 12px;
+    left: 12px;
+    transform: translateY(-50%);
+    text-align: center;
+    z-index: 1;
 }
 
 .breadcrumb {
@@ -359,8 +375,16 @@ $value in $colors {
 
 //Avatar
 .avatar {
+    &.avatar-coin {
+        height: 36px;
+        width: 36px;
+    }
     &.avatar-ex-sm {
         max-height: 25px;
+    }
+    &.avatar-ex-small {
+        height: 36px;
+        width: 36px;
     }
     &.avatar-md-sm {
         height: 45px;
@@ -392,9 +416,14 @@ $value in $colors {
 .accordion {
     .accordion-item {
         overflow: hidden;
+        border: 0;
+        box-shadow: $shadow;
+        background: transparent;
         .accordion-button {
             font-weight: 600;
             text-align: left;
+            box-shadow: none;
+            padding: 1rem 2.5rem 1rem 1.25rem;
             &:focus {
                 box-shadow: none;
             }
@@ -459,6 +488,7 @@ $value in $colors {
     .progress {
         height: 8px;
         overflow: visible;
+        background: $gray-200;
         .progress-bar {
             border-radius: 6px;
             animation: animate-positive 3s;
@@ -483,6 +513,44 @@ $value in $colors {
     border-left: 3px solid $gray-300;
     border-radius: 6px;
     font-size: 16px;
+}
+
+.blockquote-wrapper {
+    .blockquote {
+        position: relative;
+        align-self: center;
+        border: 2px solid $primary;
+        &:after {
+            content:"";
+            position: absolute;
+            border: 2px solid $primary;
+            border-radius: 0 50px 0 0;
+            width: 60px;
+            height: 60px;
+            bottom: -60px;
+            left: 50px;
+            border-bottom: none;
+            border-left: none;
+            z-index: 3; 
+        }
+        &:before {
+            content:"";
+            position: absolute;
+            width: 80px;
+            border: 6px solid $white;
+            bottom: -3px;
+            left: 50px;
+            z-index: 2;
+        }
+    }
+    
+    .author {
+        position: relative;
+        margin-left:150px;
+        &:first-letter {
+            margin-left:-12px;
+        }
+    }
 }
 
 //Form
@@ -510,7 +578,9 @@ $value in $colors {
     }
 }
 
+
 .form-check-input {
+    border: 1px solid $gray-300;
     &:focus {
         border-color: $primary;
         box-shadow: none;
@@ -535,11 +605,12 @@ $value in $colors {
         padding-right: 160px;
         padding-left: 30px;
         background-color: rgba($white, 0.8);
+        height: 50px;
     }
     button {
         position: absolute;
-        top: 1.5px;
-        right: 2px;
+        top: 2px;
+        right: 3px;
         outline: none !important;
     }
     form {
@@ -585,6 +656,14 @@ $value in $colors {
             }
         }
     }
+}
+
+.position-middle-bottom {
+    position: absolute;
+    bottom: 15px;
+    left: 12px;
+    right: 12px;
+    text-align: center;
 }
 
 // Loader
@@ -680,19 +759,26 @@ $value in $colors {
 }
 //back to top
 .back-to-top {
-    z-index: 99; 
     position: fixed;
+    z-index: 99;
     bottom: 30px;
     right: 30px;
     display: none;
     transition: all 0.5s ease;
+    height: 36px;
+    width: 36px;
+    line-height: 34px;
+    border-radius: 6px;
+    text-align: center;
+    background: $primary;
+    color: $white !important;
     .icons {
         transition: all 0.5s ease;
     }
     &:hover {
         transform: rotate(45deg);
         .icons {
-            transform: rotate(-45deg);
+            transform: rotate(-45deg) !important;
         }
     }
 }
@@ -749,19 +835,4 @@ $value in $colors {
 
 .uim-svg {
     vertical-align: 0 !important;
-}
-
-@media (max-width: 768px) {
-    .display-1 {
-        font-size: 56px !important;
-    }
-    .display-2 {
-        font-size: 50px !important;
-    }
-    .display-3 {
-        font-size: 42px !important;
-    }
-    .display-4 {
-        font-size: 36px !important;
-    }
 }
