--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -1,6 +1,10 @@
 //
 // features.scss
 //
+
+/*********************************/
+/*     Features & Services       */
+/*===============================*/
 .features {
     .icon {
         background: rgba($primary, 0.1);
@@ -49,14 +53,6 @@
     }
     &.fea-primary {
         transition: all 0.5s ease;
-        .content {
-            .title {
-                transition: all 0.5s ease;
-                &:hover {
-                    color: $primary !important;
-                }
-            }
-        }
         .big-icon {
             position: absolute;
             top: 50%;
@@ -80,6 +76,9 @@
             }
             .big-icon {
                 opacity: 0.05;
+            }
+            .readmore {
+                color: $white !important;
             }
         }
     }
@@ -122,7 +121,7 @@
             position: absolute;
             width: 60%;
             height: 40px;
-            top: 80px;
+            top: 30px;
             left: 80%;
             background: url("../images/process.png") center center no-repeat;
             z-index: 1;
