--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -2,6 +2,10 @@
 // general.scss
 //
 
+/*********************************/
+/*         General               */
+/*===============================*/
+
 body {
     font-family: $font-family-secondary;
     overflow-x: hidden !important;
@@ -10,7 +14,7 @@ body {
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: $font-family-base;
-    line-height: 1.5;
+    line-height: 1.3;
     font-weight: 600;
 }
 ::selection {
