--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,6 +1,11 @@
 //
 // menu.scss
 //
+
+/*********************************/
+/*         Menu                  */
+/*===============================*/
+
 #topnav {
     position: fixed;
     right: 0;
@@ -45,6 +50,7 @@
     .has-submenu {
         position: relative;
         .submenu {
+            position: relative;
             .submenu-arrow {
                 border: solid $dark;
                 border-radius: 0.5px;
@@ -54,11 +60,20 @@
                 transform: rotate(-45deg);
                 position: absolute;
                 right: 20px;
-                top: 14px;
+                top: 13px;
             }
             .has-submenu {
+                .submenu {
+                    .has-submenu {
+                        &:hover {
+                            .submenu-arrow {
+                                border-color: $primary;
+                            }
+                        }
+                    }
+                }
                 &:hover {
-                    .submenu-arrow {
+                    >.submenu-arrow {
                         border-color: $primary;
                     }
                 }
@@ -68,7 +83,6 @@
     .navbar-toggle {
         border: 0;
         position: relative;
-        width: 60px;
         padding: 0;
         margin: 0;
         cursor: pointer;
@@ -76,7 +90,7 @@
             width: 25px;
             display: block;
             position: relative;
-            margin: 28px 20px;
+            margin: 30px 0 26px 10px;
             height: 18px;
         }
         span {
@@ -95,7 +109,7 @@
     //Buy button
     .buy-button {
         float: right;
-        line-height: 68px;
+        line-height: 74px;
         > li {
             line-height: initial;
         }
@@ -169,13 +183,27 @@
                 letter-spacing: 1px;
                 line-height: 24px;
                 text-transform: uppercase;
-                transition: all 0.5s;    
                 font-family: $font-family-base;
                 padding-left: 15px;
                 padding-right: 15px;
                 &:hover,
                 &:active{
                     color: $primary;    
+                }
+            }
+            .submenu {
+                &.megamenu {
+                    li {
+                        .megamenu-head {
+                            padding: 10px 20px;
+                            white-space: nowrap;
+                            font-size: 11.5px;
+                            text-transform: uppercase;
+                            letter-spacing: 0.04em;
+                            font-weight: bolder;
+                            color: $dark !important;
+                        }
+                    }
                 }
             }
         }
@@ -302,6 +330,7 @@
 .logo {
     font-weight: 700;
     font-size: 24px;
+    margin-right: 15px;
     padding: 0 0 6px;
     letter-spacing: 1px;
     line-height: 68px;
@@ -314,9 +343,6 @@
                 .submenu {
                     &.megamenu {
                         width: 1116px !important;
-                        > li {
-                            min-width: 223px !important;
-                        }
                     }
                 }
             }
@@ -330,10 +356,7 @@
             > li {
                 .submenu {
                     &.megamenu {
-                        width: 936PX !important;
-                        > li {
-                            min-width: 180px;
-                        }
+                        width: 936px !important;
                     }
                 }
             }
@@ -345,6 +368,7 @@
     #topnav {
         .navigation-menu {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             > .has-submenu {
                 &:hover {
@@ -402,11 +426,12 @@
                         left: 50%;
                         transform: translateX(-50%);
                         position: fixed;
-                        top: 74px;
+                        top: auto;
+                        display: flex;
                         > li {
                             overflow: hidden;
-                            display: inline-block;
                             vertical-align: top;
+                            width: 20%;
                             .submenu {
                                 left: 100%;
                                 top: 0;
@@ -414,6 +439,17 @@
                                 margin-top: -1px;
                             }
                         }
+                        // li {
+                        //     .megamenu-head {
+                        //         padding: 10px 20px;
+                        //         white-space: nowrap;
+                        //         font-size: 11px;
+                        //         text-transform: uppercase;
+                        //         letter-spacing: 0.04em;
+                        //         font-weight: 700;
+                        //         color: $dark !important;
+                        //     }
+                        // }
                     }
                     > li {
                         .submenu {
@@ -583,6 +619,13 @@
                             transition: all 0.3s;
                         }
                     }
+                    &.megamenu {
+                        li {
+                            .megamenu-head {
+                                padding: 7px 15px;
+                            }
+                        }
+                    }
                     &.open {
                         display: block;
                     }
@@ -684,14 +727,14 @@
         .navigation-menu {
             .has-submenu {
                 .menu-arrow {
-                    right: 16px;
+                    right: 8px;
                     top: 16px;
                 }
             }
         }
-        .buy-button {
-            padding: 3px 0;
-        }
+        // .buy-button {
+        //     padding: 3px 0;
+        // }
     }
 }
 
@@ -713,16 +756,16 @@
                                             opacity: 1;
                                             margin-left: 0;
                                             margin-right: 0;
-                                            // > li{
-                                            //     &:hover {
-                                            //         > .submenu {
-                                            //             visibility: visible;
-                                            //             opacity: 1;
-                                            //             margin-left: 0;
-                                            //             margin-right: 0;
-                                            //         }
-                                            //     }
-                                            // }
+                                            > li{
+                                                &:hover {
+                                                    > .submenu {
+                                                        visibility: visible;
+                                                        opacity: 1;
+                                                        margin-left: 0;
+                                                        margin-right: 0;
+                                                    }
+                                                }
+                                            }
                                         }
                                     }
                                 }
@@ -738,11 +781,13 @@
     }
 }
 
-@media (max-width: 375px){
+@media (max-width: 425px){
     #topnav {
-        .buy-button {
-            display: none;
-        }
+        // .buy-button {
+        //     .button {
+        //         display: none;
+        //     }
+        // }
         .buy-menu-btn {
             display: block !important;
             margin: 0 10px;
@@ -753,11 +798,6 @@
                         transform: translate3d(0px, -54px, 0px) !important;
                     }
                 }
-            }
-        }
-        .navbar-toggle {
-            .lines {
-                margin-right: 0 !important;
             }
         }
     }
