--- a/scss/_price.scss
+++ b/scss/_price.scss
@@ -1,6 +1,11 @@
 //
 // price.scss
 //
+
+/*********************************/
+/*         Pricing & Plans       */
+/*===============================*/
+
 .pricing-rates {
     position: relative;
     z-index: 1;
@@ -75,13 +80,13 @@
     &.ribbon-left {
         left: -5px;
         span {
-            left: -23px;
+            left: -21px;
             transform: rotate(-45deg);
         }
     }
     span {
         position: absolute;
-        top: 15px;
+        top: 18px;
         width: 100px;
         color: $white;
         &:before,
@@ -109,4 +114,95 @@
         font-size: 27px;
         letter-spacing: 1px;
     }
+}
+
+
+//Cryptocurrency
+
+.crypto-chart {
+    position: absolute;
+    left: 24px;
+    right: 24px;
+    bottom: 24px;
+    opacity: 0.1;
+    z-index: 0;
+}
+
+.calculator-block {
+    background-color: $white;
+    .cryptonatorwidget {
+        border: none !important;
+        padding: 0 !important;
+        background: $light !important;
+        input,
+        select {
+            height: 40px !important;
+            line-height: 40px !important;
+            margin-bottom: 0;
+            border: none;
+            background-color: $light !important;
+            border: none;
+            outline: none;
+            box-shadow: $shadow;
+            padding: 8px 12px;
+            border-radius: 6px;
+            background-color: transparent;
+            color: $muted;
+            font-family: $font-family-base !important;
+        }
+        div:last-child{
+            display: none;
+        }
+    }
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        color: $muted;
+        text-transform: capitalize;
+    }
+    ::-moz-placeholder { /* Firefox 19+ */
+        color: $muted;
+        text-transform: capitalize;
+    }
+    :-ms-input-placeholder { /* IE 10+ */
+        color: $muted;
+        text-transform: capitalize;
+    }
+    :-moz-placeholder { /* Firefox 18- */
+        color: $muted;
+        text-transform: capitalize;
+    }
+}
+
+//Apexcharts
+.apexcharts-tooltip {
+    background: $black !important;
+    color: $light;
+}
+
+//Switcher-pricing
+.switcher-pricing {
+    .toggle, .toggler {
+        display: inline-block;
+        vertical-align: middle;
+    }
+    
+    .toggler {
+        transition: all 0.5s ease;
+        font-weight: bold;
+    }
+    
+    .toggler--is-active {
+        color: $primary !important;
+    }
+
+    .form-switch {
+        .form-check-input {
+            width: 48px;
+            height: 24px;
+            margin-top: 0;
+        }
+    }
+}
+
+.hide{
+    display: none;
 }
