--- a/scss/_team.scss
+++ b/scss/_team.scss
@@ -1,6 +1,11 @@
 //
 // team.scss
 //
+
+/*********************************/
+/*         Team members          */
+/*===============================*/
+
 .team {
     img {
         transition: all 0.5s ease;
