--- a/scss/dark/_components.scss
+++ b/scss/dark/_components.scss
@@ -2,6 +2,10 @@
 // components.scss
 //
 
+/*********************************/
+/*     Components-DARK           */
+/*===============================*/
+
 //Buttons
 @each $name,
 $value in $colors {
@@ -44,7 +48,7 @@ $value in $colors {
 .btn {
     &.btn-dark {
         color: $white !important;
-        background: $dark;
+        background: $dark !important;
         border: 1px solid $gray-100 !important;
         &:hover, &:focus, &:active, &.active, &.focus {
             background-color: darken($dark, 5%) !important;
@@ -185,7 +189,7 @@ $value in $colors {
     .page-item {
         .page-link {
             color: $dark;
-            border: 1px solid $gray-100;
+            border: 1px solid $gray-800;
             background: $white; 
             &:hover {
                 color: $dark !important;
@@ -199,6 +203,7 @@ $value in $colors {
 //Accordion
 .accordion {
     .accordion-item {
+        box-shadow: $shadow;
         .accordion-button {
             text-align: right !important;
             &.collapsed {
@@ -238,7 +243,7 @@ $value in $colors {
 //Processbar
 .progress-box {
     .progress {
-        background: $gray-100;
+        background: $gray-800;
     }
 }
 
@@ -249,11 +254,18 @@ $value in $colors {
     font-size: 16px;
 }
 
+.blockquote-wrapper {
+    .blockquote {
+        &:before {
+            border: 6px solid $white;
+        }
+    }
+}
 //Form
 .form-control {
     background: $white;
-    border: 1px solid $gray-100;
-    color: $gray-300;
+    border: 1px solid $gray-800;
+    color: $gray-300 !important;
     &:focus {
         background: $white;
     }
@@ -264,7 +276,7 @@ $value in $colors {
 
 .form-check-input {
     background-color: $white;
-    border-color: $gray-100;
+    border-color: $gray-800;
 }
 
 //Subscribe form
@@ -283,10 +295,10 @@ $value in $colors {
         color: $dark;
         td,
         th {
-            border-top-color: $gray-100;
+            border-top-color: $gray-800;
         }
         thead th {
-            border-bottom-color: $gray-100;
+            border-bottom-color: $gray-800;
         }
     } 
     .table-center {
@@ -301,7 +313,7 @@ $value in $colors {
     }
 }
 .table {
-    border-color: $gray-100;
+    border-color: $gray-800;
 }
 
 .table-responsive .table-center tbody tr:hover {
@@ -321,7 +333,7 @@ $value in $colors {
     }
     .modal-header,
     .modal-footer {
-        border-color: $gray-200;
+        border-color: $gray-800;
     }
 }
 .modal-open {
@@ -355,19 +367,37 @@ $value in $colors {
             }
         }
     }
+    &.social {
+        li {
+            a {
+                color: $muted;
+                border: 1px solid $muted;
+                &:hover {
+                    color: $dark !important;
+                }
+            }
+        }
+    }
 }
 
 //back to top
 .back-to-top {
+    background: $primary;
     color: $dark;
-    background-color: $gray-100;
-    box-shadow: $shadow;
-    &:hover {
-        color: $white;
-    }
 }
 
 //Blog
+.blog {
+    .overlay {
+        background: $white !important;
+    }
+    .author {
+        .user,
+        .date {
+            color: $dark !important;
+        }
+    }
+}
 .media-list {
     .sub-comment {
         border-left: 2px dashed $gray-100;
@@ -399,13 +429,14 @@ $value in $colors {
             }
         }
     }
-    .tagcloud {
-        > a {
-            background: $light !important;
-            color: $gray-300 !important;
-            &:hover {
-                color: $dark !important;
-            }
+}
+
+.tagcloud {
+    > a {
+        background: $light !important;
+        color: $gray-300 !important;
+        &:hover {
+            color: $dark !important;
         }
     }
 }
@@ -424,6 +455,13 @@ $value in $colors {
     }
 }
 
+//token-sale
+#token-sale {
+    .count-down {
+        color: $dark !important;
+    }
+}
+
 //maintenance
 #clock {
     color: $dark;
@@ -438,6 +476,38 @@ $value in $colors {
 .categories {
     &:hover {
         box-shadow: $shadow;
+    }
+}
+
+
+//Chat
+.chat {
+    .chat-list {
+        &:hover,
+        &.active,
+        &:focus {
+            background: $light !important;
+            box-shadow: $shadow;
+        }
+    }
+    
+    &.chat-person {
+        .chat-msg {
+            .msg {
+                border: 1px solid $gray-800;
+            }
+        }
+    }
+}
+
+// _smiple-bar.scss
+.simplebar-track {
+    &.simplebar-vertical {
+        .simplebar-scrollbar {
+            &:before {
+                background: $gray-800 !important;
+            }
+        }
     }
 }
 
@@ -480,9 +550,55 @@ $value in $colors {
             }         
         }
     }    
-    &.footer-bar,
-    &.footer-border {
+    .footer-bar,
+    .footer-border {
         border-top: 1px solid lighten($footer, 5%);
+    }    
+    .border {
+        border-color: lighten($footer, 5%) !important;
+    }
+
+    //Footer Light
+    &.footer-light {
+        background: $light;
+        color: $muted;
+        .footer-head {
+            color: $dark;
+        }
+
+        .foot-subscribe {
+            .form-control {
+                background-color: $light;
+                border: 1px solid $gray-200;
+                color: $light;
+            }
+            &.foot-white {
+                .form-control {
+                    color: $gray-500;
+                }
+            }
+            input{
+                &::placeholder{
+                    color: $gray-500;
+                }
+            }
+        }
+
+        .border {
+            border-color: lighten($footer, 5%) !important;
+        }
+        .text-foot {
+            color: $muted;
+        }
+        .footer-list {
+            li {
+                a{
+                    &:hover {
+                        color: $gray-400;
+                    }
+                }   
+            }
+        }
     }
 }
 
@@ -523,6 +639,38 @@ $value in $colors {
         }
     }
 }
+
+//Price
+.calculator-block {
+    background-color: $white;
+    .cryptonatorwidget {
+        background: $light !important;
+        input,
+        select {
+            background-color:$light !important;
+            box-shadow: $shadow;
+            color: $gray-300;
+        }
+    }
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        color: $gray-300;
+    }
+    ::-moz-placeholder { /* Firefox 19+ */
+        color: $gray-300;
+    }
+    :-ms-input-placeholder { /* IE 10+ */
+        color: $gray-300;
+    }
+    :-moz-placeholder { /* Firefox 18- */
+        color: $gray-300;
+    }
+}
+//Apexcharts
+.apexcharts-tooltip {
+    background: $white !important;
+    color: $dark;
+}
+
 //Team
 .team {
     &:hover {
@@ -539,6 +687,19 @@ $value in $colors {
             border: 8px solid $dark;
             border-color: transparent $white $white transparent;
             box-shadow: 2px 2px 2px -1px rgba($dark, 0.15);
+        }
+    }
+}
+
+//Tns control
+.tns-controls {
+    button[data-controls="prev"],
+    button[data-controls="next"] {
+        background: $dark;
+        color: $white;
+        box-shadow: $shadow-lg;
+        &:hover {
+            color: $dark;
         }
     }
 }
@@ -578,7 +739,7 @@ $value in $colors {
 
 //Timeline
 .main-icon {
-    border: 2px solid $gray-200;
+    border: 2px solid $gray-800;
 }
 .timeline-page {
     &:after {
