--- a/scss/rtl/_helper-rtl.scss
+++ b/scss/rtl/_helper-rtl.scss
@@ -2,6 +2,10 @@
 // helper.scss
 //
 
+/*********************************/
+/*     Helper-RTL      */
+/*===============================*/
+
 .text-start {
     text-align: right !important;
 }
@@ -31,5 +35,16 @@ dd {
 @keyframes moveSlideshow {
     100% { 
         transform: translateX(45%);  
+    }
+}
+
+
+//Cookies
+.cookie-popup {
+    .cookie-popup-actions {
+        button {
+            left: 5px !important;
+            right: auto;
+        }
     }
 }
