--- a/scss/rtl/_menu-rtl.scss
+++ b/scss/rtl/_menu-rtl.scss
@@ -1,6 +1,11 @@
 //
 // menu.scss
 //
+
+/*********************************/
+/*          Menu-RTL             */
+/*===============================*/
+
 #topnav {
     .logo {
         float: right;
@@ -11,6 +16,23 @@
                 border-width: 2px 0px 0px 2px;
                 left: 20px;
                 right: auto;
+            }
+        }
+    }
+
+    .navbar-toggle {
+        .lines {
+            margin: 30px 10px 26px 0 !important;
+        }
+        span {
+            height: 2px;
+            width: 100%;
+            background-color: $dark;
+            display: block;
+            margin-bottom: 5px;
+            transition: transform .5s ease;   
+            &:last-child {
+                margin-bottom: 0;
             }
         }
     }
@@ -32,6 +54,11 @@
     .menu-extras {
         float: left;
     }
+}
+
+.logo {
+    margin-right: auto;    
+    margin-left: 15px;
 }
 
 @media (min-width: 992px) {
@@ -146,7 +173,7 @@
         .navigation-menu {
             .has-submenu {
                 .menu-arrow {
-                    left: 16px;
+                    left: 8px;
                     right: auto;
                 }
                 .submenu {
@@ -161,12 +188,6 @@
 
 @media (max-width: 375px){
     #topnav {
-        .navbar-toggle {
-            .lines {
-                margin-left: 0 !important;
-                margin-right: auto;
-            }
-        }
         .buy-menu-btn {
             .dropdown {
                 .dropdown-menu {
