--- a/scss/style-rtl.scss
+++ b/scss/style-rtl.scss
@@ -1,9 +1,9 @@
 /* Template Name: Landrick - Saas & Software Landing Page Template
    Author: Shreethemes
-   E-mail: shreethemes@gmail.com
+   E-mail: support@shreethemes.in
    Created: August 2019
-   Version: 3.1.1
-   Updated: March 2021
+   Version: 3.8.0
+   Updated: July 2021
    File Description: Main Css file of the template
 */
 /*********************************/
@@ -57,6 +57,7 @@
 @import "countdown";
 @import "contact";
 @import "footer";
+@import "switcher";
 
 // RTL Version
 @import "rtl/bootstrap-custom-rtl";
